--- a/hongdo_ros_web/scripts/select_pic.html
+++ b/hongdo_ros_web/scripts/select_pic.html
@@ -30,6 +30,9 @@
                 <div class="display">
                     <img src="hongdo_AI/input/model.png" alt="">
                 </div>
+                <div class="camera_bg">
+                    <img src="img/index_img/camera_bg.png" alt="">
+                </div>
             </div>
             <div class="bg3">
                 <img class="img_bg" src="img/index_img/background2.png" alt="">
