--- a/hongdo_ros_web/scripts/upload.html
+++ b/hongdo_ros_web/scripts/upload.html
@@ -34,6 +34,9 @@
             <div id= "display" class="display">
               <video class="myVideo"  id="myVideo" class="myVideo"></video>
             </div>
+            <div class="camera_bg">
+              <img src="img/index_img/camera_bg.png" alt="">
+            </div>
         </div>
         <div class="bg3">
             <img class="img_bg" src="img/index_img/background2.png" alt="">
