--- a/hongdo_ros_web/scripts/drawn.html
+++ b/hongdo_ros_web/scripts/drawn.html
@@ -25,6 +25,9 @@
                     <div class="img">
                         <img src="hongdo_AI/output/trained_model.png" alt="">
                     </div>
+                    <div class="camera_bg">
+                        <img src="img/index_img/camera_bg.png" alt="">
+                    </div>
                 </div>
                 <div class="bg3">
                     <img class="img_bg" src="img/index_img/background2.png" alt="">
