--- a/hongdo_ros_web/scripts/index.html
+++ b/hongdo_ros_web/scripts/index.html
@@ -15,6 +15,9 @@
         <div class="bg">
             <img src="img/index_img/background1.jpg" alt="">
         </div>
+        <div id="skip" class="skip">
+            <img src="img/index_img/next_btn.png" alt="">
+        </div>
         <video id="index_video" src="video/index_video.mp4"></video>
         <div class="off_select_btn_box">
             <div id="YES" class="yes_btn">
