--- a/hongdo_ros_web/scripts/intro.html
+++ b/hongdo_ros_web/scripts/intro.html
@@ -12,7 +12,11 @@
 <body>
   <main>
     <div class="intro">
-      <img src="img/index_img/intro.png" alt="">
+      <img src="img/index_img/background2.png" alt="">
+    </div>
+    <div class="title">
+      <div class="a1">홍이와</div>
+      <div class="a2">먹이</div>
     </div>
     <div class="text">
       홍이와 먹이, 로봇 시민에게 다가가다.
