Fix drawn && Modify scripts

--- a/hongdo_ros_web/scripts/drawn.html
+++ b/hongdo_ros_web/scripts/drawn.html
@@ -56,7 +56,7 @@
                 <div class="txt_end1">
                     <div class="txt_end1_1">잠깐 !</div>
                     <div class="txt_end1_2">포토카드를 원하신다면 부스에서</div>
-                    <div class="txt_end1_3">게임을 진행하시고 퀴즈를 맞혀주세요 !</div>
+                    <div class="txt_end1_3">설문조사를 진행하시고 카드를 받아가세요 !</div>
                     
                 </div>
                 <img class="img2" src="img/index_img/select_box1.png" alt="">
