--- a/hongdo_ros_web/scripts/select_pic.html
+++ b/hongdo_ros_web/scripts/select_pic.html
@@ -28,7 +28,7 @@
             <div class="duru2">
                 <img class="duru2" src="img/index_img/duru2.png" alt="">
                 <div class="display">
-                    <img src="hongdo_AI/input/model.png" alt="">
+                    <img src="hongdo_AI/input/face_detect_model.jpg" alt="">
                 </div>
                 <div class="camera_bg">
                     <img src="img/index_img/camera_bg.png" alt="">
